--- a/notebooks/Structural-Estimates-From-Empirical-MPCs-Fagereng-et-al-Problems-And-Solutions.ipynb
+++ b/notebooks/Structural-Estimates-From-Empirical-MPCs-Fagereng-et-al-Problems-And-Solutions.ipynb
@@ -67,7 +67,7 @@
     "TypeCount = 8    # Number of consumer types with heterogeneous discount factors\n",
     "AdjFactor = 1.0  # Factor by which to scale all of MPCs in Table 9\n",
     "T_kill = 100     # Don't let agents live past this age\n",
-    "Splurge = 0.0    # Consumers automatically spend this amount of any lottery prize\n",
+    "Splurge = 0.7    # Consumers automatically spend this amount of any lottery prize\n",
     "do_secant = True # If True, calculate MPC by secant, else point MPC\n",
     "drop_corner = False # If True, ignore upper left corner when calculating distance"
    ]
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "code_folding": []
    },
@@ -239,11 +239,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "code_folding": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.78981881 0.16098057 0.5289142048936715\n",
+      "0.8293097505 0.16098057 0.39842984747475435\n",
+      "0.78981881 0.1690295985 0.519897503335626\n",
+      "0.8293097505000001 0.1690295985 0.4047067129003057\n",
+      "0.868800691 0.16098057 0.45693525591570083\n",
+      "0.84905522075 0.162992827125 0.4117540530692909\n",
+      "0.80956428025 0.167017341375 0.4417065409648033\n",
+      "0.839182485625 0.1639989556875 0.39789076494320036\n",
+      "0.839182485625 0.1559499271875 0.386504859100039\n",
+      "0.8441188531874999 0.14941009153125 0.37940279758722306\n",
+      "0.8539915883125 0.15242847721875002 0.39786355812328267\n",
+      "0.8589279558749999 0.13783961306250003 0.38192504796796584\n",
+      "0.8490552207499997 0.13482122737500002 0.3687889846447872\n",
+      "0.8465870369687498 0.126017602453125 0.36822679234297523\n",
+      "0.8317779342812498 0.13758808092187497 0.3880883342775891\n",
+      "0.8521404504765624 0.13777673002734375 0.37240003938776434\n",
+      "0.8546086342578123 0.11438424094921873 0.36392176097541\n",
+      "0.8598535247929684 0.09687131565820306 0.37831956545919454\n",
+      "0.8490552207499997 0.10262511337499997 0.3927811536105689\n",
+      "0.8513691430449217 0.1289888258642578 0.3660469503516704\n",
+      "0.8593907403339842 0.11735546436035155 0.3637611935623477\n",
+      "0.8657925920166014 0.1130243953139648 0.3675381959647884\n",
+      "0.8626302315468748 0.10275087944531247 0.3666608038527274\n",
+      "0.85418441517041 0.12242933925952147 0.363872721178737\n",
+      "0.858966521246582 0.1254005626706543 0.36720100115453663\n",
+      "0.8556981060050047 0.11713832137957762 0.36317220835904973\n",
+      "0.8609044311685788 0.11206444648040771 0.3637253926334046\n",
+      "0.8572117968395994 0.11184730349963379 0.363632056792349\n",
+      "0.8520054716760254 0.11692117839880371 0.36468674972049886\n",
+      "0.8586796912954404 0.11327862946000672 0.36329305834516984\n",
+      "0.8571660004608457 0.11856964733995057 0.36324630298146615\n",
+      "0.8541844151704101 0.12242933925952149 0.36387272117873687\n",
+      "0.8575558722641828 0.11556630690988541 0.3628616180373392\n",
+      "0.8560879778083419 0.11413498094951247 0.3634837059883238\n",
+      "0.8568964947977198 0.11746098074234104 0.36293122654863297\n",
+      "0.858754261056898 0.11588896627264884 0.3629374406192379\n",
+      "0.8579902222939249 0.11620130504938103 0.36288181080800974\n",
+      "0.858649599760388 0.11430663121692539 0.36315849681252826\n",
+      "0.8573347710383868 0.11667239336098713 0.36289924555419345\n",
+      "0.858211323519721 0.1150952185982793 0.3630066265566672\n",
+      "0.8575539091587203 0.11627809967031016 0.36292552297672215\n",
+      "0.8577730472790539 0.11588380597963321 0.36294183122442314\n",
+      "0.8574453216512848 0.11611935013543627 0.3629670134350041\n",
+      "0.8578835978919518 0.11533076275408234 0.36294431546861733\n",
+      "0.857774028831785 0.11552790959942083 0.36288850109457094\n",
+      "0.8575568538169138 0.11521041052967301 0.36303143032229307\n",
+      "0.8577189989135189 0.11571545711714316 0.3628942316584399\n",
+      "0.8576109021824488 0.11537875939216306 0.3629940980607689\n",
+      "0.8576919747307514 0.11563128268589815 0.3628997841107059\n",
+      "0.8576649505479839 0.11554710825465311 0.36288998709381276\n",
+      "0.8576374355888509 0.11564088201351429 0.3628679634505405\n",
+      "0.8575283573050498 0.11566008066874658 0.3628834157954364\n",
+      "0.8575625056157833 0.1156318375652232 0.36285420328376083\n",
+      "Optimization terminated successfully.\n",
+      "         Current function value: 0.362854\n",
+      "         Iterations: 27\n",
+      "         Function evaluations: 53\n",
+      "Time to estimate is 202.67708253860474 seconds.\n",
+      "Finished estimating for scaling factor of 1.0 and \"splurge amount\" of $700.0\n",
+      "Optimal (beta,nabla) is [0.85756251 0.11563184], simulated MPCs are:\n",
+      "[[0.78058645 0.74852543 0.69758672 0.57062401]\n",
+      " [0.68077668 0.64027802 0.57082729 0.39800477]\n",
+      " [0.60892177 0.5696061  0.4929874  0.30577941]\n",
+      " [0.43708697 0.40971915 0.34376774 0.19471014]]\n",
+      "Distance from Fagereng et al Table 9 is 0.36285420328376083\n"
+     ]
+    }
+   ],
    "source": [
     "# Conduct the estimation\n",
     "\n",
@@ -274,38 +346,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "FagerengObjFunc(0.78,0.16)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The given parameter values violate the Perfect Foresight Growth Impatience Condition for this consumer type; the GIFPF is: 1.0347 \n",
-      "The given parameter values violate the Individual Growth Impatience Condition; the GIFInd is: 1.0440 \n",
-      "The given parameter values violate the Aggregate Growth Impatience Condition; the GIFAgg is: 1.0088 \n",
-      "[0.78896033 2.84055962 1.0888332  ... 0.99285433 1.26879196 1.4485906 ]\n"
-     ]
-    }
-   ],
-   "source": [
-    "BaseType = IndShockConsumerType(**base_params)\n",
-    "    \n",
-    "BaseType.track_vars = ['mNrmNow','cNrmNow','pLvlNow']\n",
-    "BaseType.solve()\n",
-    "BaseType.initializeSim()\n",
-    "BaseType.simulate(50)\n",
-    "BaseType.unpackcFunc()  \n",
-    "print(BaseType.cNrmNow)\n",
-    "    \n",
-    "BaseType.simulate(1)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -320,34 +361,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "EstTypeList[1].cNrmNow= [1.08822299 1.20560498 1.01537602 ... 1.04548347 1.00789338 1.06301118]\n",
-      "[0.93228042 1.107014   0.92136972 ... 1.12145668 1.18442796 1.01069509]\n",
-      "[0.93228042 1.107014   0.92136972 ... 1.12145668 1.18442796 1.01069509]\n",
-      "[1.08822299 1.0146687  0.97373526 ... 0.92136972 1.01611433 1.09820461]\n",
-      "[1.08822299 1.0146687  0.97373526 ... 0.92136972 1.01611433 1.09820461]\n",
-      "[1.06962055 1.01947244 1.09451708 ... 1.07168042 1.03360508 0.26452928]\n",
-      "[1.06962055 1.01947244 1.09451708 ... 1.07168042 1.03360508 0.26452928]\n",
-      "[0.97838285 1.07546596 1.17059841 ... 1.11282204 1.06078918 0.94036297]\n",
-      "[0.97838285 1.07546596 1.17059841 ... 1.11282204 1.06078918 0.94036297]\n",
-      "[1.09366699 1.06831342 1.12450128 ... 1.08121563 1.0796315  0.8900422 ]\n",
-      "[1.09366699 1.06831342 1.12450128 ... 1.08121563 1.0796315  0.8900422 ]\n",
-      "[1.08696846 1.01393431 1.0482489  ... 1.1693224  1.12838197 1.06074668]\n",
-      "[1.08696846 1.01393431 1.0482489  ... 1.1693224  1.12838197 1.06074668]\n",
-      "[1.01875305 1.18088535 1.01075699 ... 1.00779005 1.01221516 1.04208204]\n",
-      "[1.01875305 1.18088535 1.01075699 ... 1.00779005 1.01221516 1.04208204]\n",
-      "[1.09505764 1.11023415 0.92975187 ... 0.80563479 1.04492392 1.03284836]\n",
-      "[1.09505764 1.11023415 0.92975187 ... 0.80563479 1.04492392 1.03284836]\n",
-      "[[0.75252495 0.68044002 0.56051643 0.40724682]\n",
-      " [0.54419681 0.49580343 0.41136369 0.29913997]\n",
-      " [0.3438541  0.31497619 0.26271664 0.19115833]\n",
-      " [0.137754   0.12477493 0.10213469 0.07388059]]\n"
+      "The MPC for t+0 is \n",
+      " [[0.77845132 0.74657034 0.6940777  0.56017388]\n",
+      " [0.50753478 0.47805917 0.42471678 0.28831915]\n",
+      " [0.30131789 0.28292907 0.24415916 0.14622008]\n",
+      " [0.10733091 0.1014214  0.08528892 0.04744846]]\n",
+      "\n",
+      "\n",
+      "The MPC for t+1 is \n",
+      " [[0.15361672 0.1736394  0.20606077 0.26237937]\n",
+      " [0.15457496 0.16409941 0.17320972 0.1579927 ]\n",
+      " [0.11933193 0.12226312 0.12182224 0.09201281]\n",
+      " [0.06696274 0.06591315 0.05982274 0.0378463 ]]\n",
+      "\n",
+      "\n",
+      "The MPC for t+2 is \n",
+      " [[0.08326682 0.10988962 0.17020442 0.34612699]\n",
+      " [0.07387294 0.08945405 0.11888358 0.1733635 ]\n",
+      " [0.05714139 0.06488917 0.07836067 0.08768752]\n",
+      " [0.04108575 0.04227787 0.04285041 0.03312343]]\n",
+      "\n",
+      "\n",
+      "The MPC for t+3 is \n",
+      " [[0.05575813 0.07802466 0.15037965 0.4373718 ]\n",
+      " [0.04020037 0.05328451 0.0887303  0.19601707]\n",
+      " [0.02901662 0.03601671 0.05321019 0.08815205]\n",
+      " [0.02409451 0.02610318 0.03025777 0.02947679]]\n"
      ]
     }
    ],
@@ -358,14 +404,14 @@
     "    EstTypeList.append(deepcopy(BaseType))\n",
     "    EstTypeList[-1](seed = j)\n",
     "\n",
-    "center = 0.78981881 \n",
-    "spread = 0.16098057\n",
+    "center = 0.85756251 \n",
+    "spread = 0.11563184\n",
     "\n",
     "# Give our consumer types the requested discount factor distribution\n",
     "beta_set = approxUniform(N=TypeCount,bot=center-spread,top=center+spread)[1]\n",
     "for j in range(TypeCount):\n",
     "    EstTypeList[j](DiscFac = beta_set[j])\n",
-    "    EstTypeList[j].track_vars = ['aNrmNow','mNrmNow','cNrmNow','pLvlNow','PermShk','TransShk']\n",
+    "    EstTypeList[j].track_vars = ['aNrmNow','mNrmNow','cNrmNow','pLvlNow','PermShkNow','TranShkNow']\n",
     "\n",
     "# Solve and simulate all consumer types, then gather their wealth levels\n",
     "multiThreadCommands(EstTypeList,['solve()','initializeSim()','simulate(95)','unpackcFunc()'])\n",
@@ -384,129 +430,87 @@
     "                 [[],[],[],[]],\n",
     "                 [[],[],[],[]],\n",
     "                 [[],[],[],[]] ]\n",
-    "\n",
+    "MPC_set_list_t1 = deepcopy(MPC_set_list)\n",
+    "MPC_set_list_t2 = deepcopy(MPC_set_list)\n",
+    "MPC_set_list_t3 = deepcopy(MPC_set_list)\n",
     "    \n",
     "# Calculate the MPC for each of the four lottery sizes for all agents\n",
     "Rfree=base_params['Rfree']\n",
     "for ThisType in EstTypeList:\n",
     "    \n",
-    "    MPC_this_type = np.zeros((ThisType.AgentCount,4))   \n",
-    "    ThisType.simulate(3)\n",
-    "    c_base = ThisType.cNrmNow\n",
-    "    print(ThisType.cNrmNow)\n",
-    "    print(ThisType.cNrmNow_hist[97])\n",
+    "    MPC_this_type = np.zeros((ThisType.AgentCount,4))\n",
+    "    MPC_this_type_t1 = np.zeros((ThisType.AgentCount,4))\n",
+    "    MPC_this_type_t2 = np.zeros((ThisType.AgentCount,4))\n",
+    "    MPC_this_type_t3 = np.zeros((ThisType.AgentCount,4))\n",
+    "    \n",
+    "    ThisType.simulate(4)\n",
+    "    StartPeriod=95\n",
+    "    c_base_0 = ThisType.cNrmNow_hist[StartPeriod]\n",
+    "    c_base_t1 = ThisType.cNrmNow_hist[StartPeriod+1]\n",
+    "    c_base_t2 = ThisType.cNrmNow_hist[StartPeriod+2]\n",
+    "    c_base_t3 = ThisType.cNrmNow_hist[StartPeriod+3]\n",
     "    \n",
     "    for k in range(4): # Get MPC for all agents of this type\n",
     "        Llvl = lottery_size[k]\n",
-    "        Lnrm = Llvl/ThisType.pLvlNow      \n",
-    "        SplurgeNrm = Splurge/ThisType.pLvlNow\n",
-    "        mAdj = ThisType.mNrmNow + Lnrm - SplurgeNrm\n",
+    "        Lnrm = Llvl/ThisType.pLvlNow_hist[StartPeriod]     \n",
+    "        SplurgeNrm = Splurge/ThisType.pLvlNow_hist[StartPeriod]\n",
+    "        mAdj = ThisType.mNrmNow_hist[StartPeriod] + Lnrm - SplurgeNrm\n",
     "        cAdj = ThisType.cFunc[0](mAdj) + SplurgeNrm\n",
-    "        MPC_this_type[:,k] = (cAdj - c_base)/Lnrm\n",
-    "            \n",
+    "        MPC_this_type[:,k] = (cAdj - c_base_0) /Lnrm\n",
+    "        \n",
+    "        # Calculate normalized market resources in t+1 (varnames t1)\n",
+    "        aNrm_t0 = ThisType.mNrmNow_hist[StartPeriod] + Lnrm - cAdj\n",
+    "        aLvl_t0 = aNrm_t0*ThisType.pLvlNow_hist[StartPeriod]\n",
+    "        mLvl_t1 = aLvl_t0*Rfree + ThisType.TranShkNow_hist[StartPeriod+1]*ThisType.pLvlNow_hist[StartPeriod+1]\n",
+    "        mNrm_t1 = mLvl_t1/ThisType.pLvlNow_hist[StartPeriod+1]\n",
+    "        cNrm_t1 = ThisType.cFunc[0](mNrm_t1)\n",
+    "        MPC_this_type_t1[:,k] = (cNrm_t1 - c_base_t1) /Lnrm\n",
+    "        \n",
+    "        # Calculate normalized market resources in t+2 (varnames t1)\n",
+    "        aNrm_t1 = mNrm_t1 - cNrm_t1;\n",
+    "        aLvl_t1 = aNrm_t1*ThisType.pLvlNow_hist[StartPeriod+1]\n",
+    "        mLvl_t2 = aLvl_t1*Rfree + ThisType.TranShkNow_hist[StartPeriod+2]*ThisType.pLvlNow_hist[StartPeriod+2]\n",
+    "        mNrm_t2 = mLvl_t2/ThisType.pLvlNow_hist[StartPeriod+2]\n",
+    "        cNrm_t2 = ThisType.cFunc[0](mNrm_t2)\n",
+    "        MPC_this_type_t2[:,k] = (cNrm_t2 - c_base_t2) /Lnrm\n",
+    "        \n",
+    "        # Calculate normalized market resources in t+3 (varnames t1)\n",
+    "        aNrm_t2 = mNrm_t2 - cNrm_t2;\n",
+    "        aLvl_t2 = aNrm_t2*ThisType.pLvlNow_hist[StartPeriod+2]\n",
+    "        mLvl_t3 = aLvl_t2*Rfree + ThisType.TranShkNow_hist[StartPeriod+3]*ThisType.pLvlNow_hist[StartPeriod+3]\n",
+    "        mNrm_t3 = mLvl_t3/ThisType.pLvlNow_hist[StartPeriod+3]\n",
+    "        cNrm_t3 = ThisType.cFunc[0](mNrm_t3)\n",
+    "        MPC_this_type_t3[:,k] = (cNrm_t3 - c_base_t3) /Lnrm\n",
+    "        \n",
     "        # Sort the MPCs into the proper MPC sets\n",
     "        for q in range(4):\n",
     "            these = ThisType.WealthQ == q\n",
     "            for k in range(4):\n",
     "                MPC_set_list[k][q].append(MPC_this_type[these,k])\n",
-    "                \n",
-    "                \n",
-    "# Calculate average within each MPC set\n",
-    "simulated_MPC_means = np.zeros((4,4))\n",
-    "for k in range(4):\n",
-    "    for q in range(4):\n",
-    "        MPC_array = np.concatenate(MPC_set_list[k][q])\n",
-    "        simulated_MPC_means[k,q] = np.mean(MPC_array)\n",
-    "        \n",
-    "        \n",
-    "print(simulated_MPC_means)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "EstTypeList[1].cNrmNow= [1.08822299 1.00397448 1.05758082 ... 1.08822299 1.1001038  0.96365912]\n",
-      "[[0.77361336 0.68317127 0.56461082 0.40476961]\n",
-      " [0.55766231 0.49862064 0.41476164 0.29719539]\n",
-      " [0.35176676 0.31756077 0.26527145 0.18965595]\n",
-      " [0.14033095 0.12607201 0.10314832 0.07315312]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "BaseType = IndShockConsumerType(**base_params)\n",
-    "EstTypeList = []\n",
-    "for j in range(TypeCount):\n",
-    "    EstTypeList.append(deepcopy(BaseType))\n",
-    "    EstTypeList[-1](seed = j)\n",
-    "\n",
-    "center = 0.78981881 \n",
-    "spread = 0.16098057\n",
-    "\n",
-    "# Give our consumer types the requested discount factor distribution\n",
-    "beta_set = approxUniform(N=TypeCount,bot=center-spread,top=center+spread)[1]\n",
-    "for j in range(TypeCount):\n",
-    "    EstTypeList[j](DiscFac = beta_set[j])\n",
-    "    #EstTypeList[j].track_vars = ['aNrmNow','mNrmNow','cNrmNow','pLvlNow']\n",
-    "\n",
-    "# Solve and simulate all consumer types, then gather their wealth levels\n",
-    "multiThreadCommands(EstTypeList,['solve()','initializeSim()','simulate()','unpackcFunc()'])\n",
-    "WealthNow = np.concatenate([ThisType.aLvlNow for ThisType in EstTypeList])\n",
-    "\n",
-    "# Get wealth quartile cutoffs and distribute them to each consumer type\n",
-    "quartile_cuts = getPercentiles(WealthNow,percentiles=[0.25,0.50,0.75])\n",
-    "for ThisType in EstTypeList:\n",
-    "    WealthQ = np.zeros(ThisType.AgentCount,dtype=int)\n",
-    "    for n in range(3):\n",
-    "        WealthQ[ThisType.aLvlNow > quartile_cuts[n]] += 1\n",
-    "    ThisType(WealthQ = WealthQ)\n",
-    "\n",
-    "# Keep track of MPC sets in lists of lists of arrays\n",
-    "MPC_set_list = [ [[],[],[],[]],\n",
-    "                 [[],[],[],[]],\n",
-    "                 [[],[],[],[]],\n",
-    "                 [[],[],[],[]] ]\n",
-    "\n",
-    "print('EstTypeList[1].cNrmNow=',EstTypeList[1].cNrmNow)\n",
-    "    \n",
-    "# Calculate the MPC for each of the four lottery sizes for all agents\n",
-    "Rfree=base_params['Rfree']\n",
-    "for ThisType in EstTypeList:\n",
-    "    \n",
-    "    MPC_this_type = np.zeros((ThisType.AgentCount,4))   \n",
-    "    ThisType.simulate(1)\n",
-    "    c_base = ThisType.cNrmNow\n",
-    "    \n",
-    "    for k in range(4): # Get MPC for all agents of this type\n",
-    "        Llvl = lottery_size[k]\n",
-    "        Lnrm = Llvl/ThisType.pLvlNow      \n",
-    "        SplurgeNrm = Splurge/ThisType.pLvlNow\n",
-    "        mAdj = ThisType.mNrmNow + Lnrm - SplurgeNrm\n",
-    "        cAdj = ThisType.cFunc[0](mAdj) + SplurgeNrm\n",
-    "        MPC_this_type[:,k] = (cAdj - c_base)/Lnrm\n",
-    "            \n",
-    "        # Sort the MPCs into the proper MPC sets\n",
-    "        for q in range(4):\n",
-    "            these = ThisType.WealthQ == q\n",
-    "            for k in range(4):\n",
-    "                MPC_set_list[k][q].append(MPC_this_type[these,k])\n",
-    "                \n",
+    "                MPC_set_list_t1[k][q].append(MPC_this_type_t1[these,k])\n",
+    "                MPC_set_list_t2[k][q].append(MPC_this_type_t2[these,k])\n",
+    "                MPC_set_list_t3[k][q].append(MPC_this_type_t3[these,k])\n",
     "                \n",
     "# Calculate average within each MPC set\n",
     "simulated_MPC_means = np.zeros((4,4))\n",
+    "simulated_MPC_means_t1 = np.zeros((4,4))\n",
+    "simulated_MPC_means_t2 = np.zeros((4,4))\n",
+    "simulated_MPC_means_t3 = np.zeros((4,4))\n",
     "for k in range(4):\n",
     "    for q in range(4):\n",
-    "        MPC_array = np.concatenate(MPC_set_list[k][q])\n",
-    "        simulated_MPC_means[k,q] = np.mean(MPC_array)\n",
+    "        simulated_MPC_means[k,q] = np.mean(np.concatenate(MPC_set_list[k][q]))\n",
+    "        simulated_MPC_means_t1[k,q] = np.mean(np.concatenate(MPC_set_list_t1[k][q]))\n",
+    "        simulated_MPC_means_t2[k,q] = np.mean(np.concatenate(MPC_set_list_t2[k][q]))\n",
+    "        simulated_MPC_means_t3[k,q] = np.mean(np.concatenate(MPC_set_list_t3[k][q]))\n",
     "        \n",
     "        \n",
-    "print(simulated_MPC_means)"
+    "print('The MPC for t+0 is \\n', simulated_MPC_means)\n",
+    "print('\\n')\n",
+    "print('The MPC for t+1 is \\n', simulated_MPC_means_t1)\n",
+    "print('\\n')\n",
+    "print('The MPC for t+2 is \\n', simulated_MPC_means_t2)\n",
+    "print('\\n')\n",
+    "print('The MPC for t+3 is \\n', simulated_MPC_means_t3)"
    ]
   },
   {
