compared to  håkons newest version

--- a/notebooks/Micro-and-Macro-Implications-of-Very-Impatient-HHs-Problems.ipynb
+++ b/notebooks/Micro-and-Macro-Implications-of-Very-Impatient-HHs-Problems.ipynb
@@ -161,8 +161,7 @@
    "execution_count": 2,
    "metadata": {
     "code_folding": [
-     0,
-     4
+     0
     ]
    },
    "outputs": [],
@@ -488,6 +487,7 @@
  "metadata": {
   "jupytext": {
    "cell_metadata_filter": "collapsed,code_folding",
+   "cell_metadata_json": true,
    "formats": "ipynb,py:percent"
   },
   "kernelspec": {
@@ -505,7 +505,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.4"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
@@ -524,6 +524,19 @@
    "latex_user_defs": false,
    "report_style_numbering": false,
    "user_envs_cfg": false
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   },
   "varInspector": {
    "cols": {
