--- a/notebooks/Structural-Estimates-From-Empirical-MPCs-Fagereng-et-al-Problems-And-Solutions-Error.ipynb
+++ b/notebooks/Structural-Estimates-From-Empirical-MPCs-Fagereng-et-al-Problems-And-Solutions-Error.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {
     "code_folding": []
    },
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {
     "code_folding": []
    },
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {
     "code_folding": []
    },
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {
     "code_folding": []
    },
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {
     "code_folding": []
    },
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {
     "code_folding": []
    },
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {
     "code_folding": [],
     "lines_to_next_cell": 1
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "metadata": {
     "code_folding": []
    },
@@ -151,11 +151,7 @@
    "source": [
     "# Define the objective function\n",
     "\n",
-    "#def FagerengObjFunc(center,spread,verbose=False):\n",
-    "#def FagerengObjFunc(center,verbose=False):    \n",
-    "def FagerengObjFuncSP(SplurgeIn,center,spread,verbose=False):    \n",
-    "    Splurge=SplurgeIn\n",
-    "    \n",
+    "def FagerengObjFunc(center,spread,verbose=False):\n",
     "    '''\n",
     "    Objective function for the quick and dirty structural estimation to fit\n",
     "    Fagereng, Holm, and Natvik's Table 9 results with a basic infinite horizon\n",
@@ -176,7 +172,6 @@
     "    distance : float\n",
     "        Euclidean distance between simulated MPCs and (adjusted) Table 9 MPCs.\n",
     "    '''\n",
-    "        \n",
     "    # Give our consumer types the requested discount factor distribution\n",
     "    beta_set = approxUniform(N=TypeCount,bot=center-spread,top=center+spread)[1]\n",
     "    for j in range(TypeCount):\n",
@@ -238,16 +233,16 @@
     "    if verbose:\n",
     "        print(simulated_MPC_means)\n",
     "    else:\n",
-    "        #print (center, spread, distance)\n",
-    "        print (SplurgeIn, distance)\n",
+    "        print (center, spread, distance)\n",
     "    return distance"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {
-    "code_folding": []
+    "code_folding": [],
+    "scrolled": false
    },
    "outputs": [
     {
@@ -305,7 +300,7 @@
       "         Current function value: 0.235983\n",
       "         Iterations: 23\n",
       "         Function evaluations: 47\n",
-      "Time to estimate is 171.42159008979797 seconds.\n",
+      "Time to estimate is 155.08540964126587 seconds.\n",
       "Finished estimating for scaling factor of 1.0 and \"splurge amount\" of $700.0\n",
       "Optimal (beta,nabla) is [0.86420188 0.0997059 ], simulated MPCs are:\n",
       "[[0.76319463 0.73520229 0.68946622 0.58239921]\n",
@@ -321,73 +316,10 @@
     "\n",
     "guess = [0.85,0.1]\n",
     "f_temp = lambda x : FagerengObjFunc(x[0],x[1])\n",
-    "#guess = [0.85]\n",
-    "#f_temp = lambda x : FagerengObjFunc(x[0])\n",
-    "\n",
     "opt_params = minimizeNelderMead(f_temp, guess, verbose=True)\n",
     "print('Finished estimating for scaling factor of ' + str(AdjFactor) + ' and \"splurge amount\" of $' + str(1000*Splurge))\n",
     "print('Optimal (beta,nabla) is ' + str(opt_params) + ', simulated MPCs are:')\n",
-    "\n",
     "dist = FagerengObjFunc(opt_params[0],opt_params[1],True)\n",
-    "#dist = FagerengObjFunc(opt_params[0],True)\n",
-    "print('Distance from Fagereng et al Table 9 is ' + str(dist))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.7 0.23598269394988314\n",
-      "0.735 0.23821076782152592\n",
-      "0.6649999999999999 0.2366195871280006\n",
-      "0.6824999999999999 0.2359416413507175\n",
-      "0.6649999999999998 0.23661958712800052\n",
-      "0.6912499999999999 0.23587221215487172\n",
-      "0.7 0.23598269394988314\n",
-      "0.6868749999999999 0.23588443301743786\n",
-      "0.6956249999999999 0.23590498454988004\n",
-      "0.6890624999999999 0.23587269398900443\n",
-      "0.6934374999999999 0.23588297663885732\n",
-      "0.6901562499999999 0.23587104635121636\n",
-      "0.6890624999999999 0.23587269398900443\n",
-      "0.690703125 0.23587127779322353\n",
-      "0.6896093749999999 0.23587151799648337\n",
-      "0.6904296875 0.23587107413214392\n",
-      "0.6898828124999998 0.23587119420274447\n",
-      "0.6902929687499999 0.23587103827549916\n",
-      "0.6904296874999999 0.23587107413214392\n",
-      "0.690224609375 0.23587103683057778\n",
-      "Optimization terminated successfully.\n",
-      "         Current function value: 0.235871\n",
-      "         Iterations: 10\n",
-      "         Function evaluations: 20\n",
-      "Time to estimate is 71.73056125640869 seconds.\n",
-      "Finished estimating for scaling factor of 1.0 and \"(beta,nabla)\" of [0.86420188, 0.0997059]\n",
-      "Optimal Splurge is $[690.22460938], simulated MPCs are:\n",
-      "[[0.76062775 0.7323651  0.68615305 0.57796918]\n",
-      " [0.65409436 0.62032092 0.55827475 0.41224345]\n",
-      " [0.57733469 0.54732486 0.48031994 0.32360344]\n",
-      " [0.40209576 0.38632388 0.33409123 0.21496587]]\n",
-      "Distance from Fagereng et al Table 9 is 0.23587103683057778\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Conduct the estimation of the splurge given the estimation of beta,nabla\n",
-    "\n",
-    "opt_estimates = [0.86420188, 0.0997059]\n",
-    "\n",
-    "SPguess = [0.7]\n",
-    "f_temp = lambda x : FagerengObjFuncSP(x[0], opt_estimates[0],opt_estimates[1])\n",
-    "opt_Splurge = minimizeNelderMead(f_temp, SPguess, verbose=True)\n",
-    "print('Finished estimating for scaling factor of ' + str(AdjFactor) + ' and \"(beta,nabla)\" of ' + str(opt_estimates))\n",
-    "print('Optimal Splurge is $' + str(1000*opt_Splurge) + ', simulated MPCs are:')\n",
-    "dist = FagerengObjFuncSP(opt_Splurge[0],opt_estimates[0],opt_estimates[1], True)\n",
     "print('Distance from Fagereng et al Table 9 is ' + str(dist))"
    ]
   },
@@ -511,14 +443,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done assigning wealth quartiles\n"
+     "ename": "Exception",
+     "evalue": "To simulate, sim_periods has to be larger than the maximum data set size T_sim. Either increase the attribute T_sim of this agent type instance and call the initializeSim() method again, or set sim_periods <= T_sim.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31m_RemoteTraceback\u001b[0m                          Traceback (most recent call last)",
+      "\u001b[0;31m_RemoteTraceback\u001b[0m: \n\"\"\"\nTraceback (most recent call last):\n  File \"/usr/local/anaconda3/lib/python3.7/site-packages/joblib/externals/loky/process_executor.py\", line 418, in _process_worker\n    r = call_item()\n  File \"/usr/local/anaconda3/lib/python3.7/site-packages/joblib/externals/loky/process_executor.py\", line 272, in __call__\n    return self.fn(*self.args, **self.kwargs)\n  File \"/usr/local/anaconda3/lib/python3.7/site-packages/joblib/_parallel_backends.py\", line 608, in __call__\n    return self.func(*args, **kwargs)\n  File \"/usr/local/anaconda3/lib/python3.7/site-packages/joblib/parallel.py\", line 256, in __call__\n    for func, args, kwargs in self.items]\n  File \"/usr/local/anaconda3/lib/python3.7/site-packages/joblib/parallel.py\", line 256, in <listcomp>\n    for func, args, kwargs in self.items]\n  File \"/usr/local/share/data/GitHub/econ-ark/HARK/HARK/parallel.py\", line 128, in runCommands\n    exec(\"agent.\" + command)\n  File \"<string>\", line 1, in <module>\n  File \"/usr/local/share/data/GitHub/econ-ark/HARK/HARK/core.py\", line 719, in simulate\n    'T_sim. Either increase the attribute T_sim of this agent type instance ' +\nException: To simulate, sim_periods has to be larger than the maximum data set size T_sim. Either increase the attribute T_sim of this agent type instance and call the initializeSim() method again, or set sim_periods <= T_sim.\n\"\"\"",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-15-6cce7e5fce31>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;31m# Solve and simulate all consumer types, then gather their wealth levels\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m \u001b[0mmultiThreadCommands\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mEstTypeList\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'solve()'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'initializeSim()'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'simulate(105)'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'unpackcFunc()'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m \u001b[0mWealthNow\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcatenate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mThisType\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maLvlNow\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mThisType\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mEstTypeList\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/share/data/GitHub/econ-ark/HARK/HARK/parallel.py\u001b[0m in \u001b[0;36mmultiThreadCommands\u001b[0;34m(agent_list, command_list, num_jobs)\u001b[0m\n\u001b[1;32m    100\u001b[0m     agent_list_out = Parallel(n_jobs=num_jobs)(\n\u001b[1;32m    101\u001b[0m         \u001b[0mdelayed\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrunCommands\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 102\u001b[0;31m         \u001b[0;32mfor\u001b[0m \u001b[0margs\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0magent_list\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0magent_list\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mcommand_list\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    103\u001b[0m     )\n\u001b[1;32m    104\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/anaconda3/lib/python3.7/site-packages/joblib/parallel.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, iterable)\u001b[0m\n\u001b[1;32m   1015\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1016\u001b[0m             \u001b[0;32mwith\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_backend\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mretrieval_context\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1017\u001b[0;31m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mretrieve\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1018\u001b[0m             \u001b[0;31m# Make sure that we get a last message telling us we are done\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1019\u001b[0m             \u001b[0melapsed_time\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_start_time\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/anaconda3/lib/python3.7/site-packages/joblib/parallel.py\u001b[0m in \u001b[0;36mretrieve\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    907\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    908\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0mgetattr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_backend\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'supports_timeout'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 909\u001b[0;31m                     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_output\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mextend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjob\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtimeout\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtimeout\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    910\u001b[0m                 \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    911\u001b[0m                     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_output\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mextend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjob\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/anaconda3/lib/python3.7/site-packages/joblib/_parallel_backends.py\u001b[0m in \u001b[0;36mwrap_future_result\u001b[0;34m(future, timeout)\u001b[0m\n\u001b[1;32m    560\u001b[0m         AsyncResults.get from multiprocessing.\"\"\"\n\u001b[1;32m    561\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 562\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mfuture\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtimeout\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtimeout\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    563\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mLokyTimeoutError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    564\u001b[0m             \u001b[0;32mraise\u001b[0m \u001b[0mTimeoutError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/anaconda3/lib/python3.7/concurrent/futures/_base.py\u001b[0m in \u001b[0;36mresult\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    433\u001b[0m                 \u001b[0;32mraise\u001b[0m \u001b[0mCancelledError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    434\u001b[0m             \u001b[0;32melif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_state\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mFINISHED\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 435\u001b[0;31m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__get_result\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    436\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    437\u001b[0m                 \u001b[0;32mraise\u001b[0m \u001b[0mTimeoutError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/anaconda3/lib/python3.7/concurrent/futures/_base.py\u001b[0m in \u001b[0;36m__get_result\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    382\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__get_result\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    383\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_exception\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 384\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_exception\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    385\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    386\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_result\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mException\u001b[0m: To simulate, sim_periods has to be larger than the maximum data set size T_sim. Either increase the attribute T_sim of this agent type instance and call the initializeSim() method again, or set sim_periods <= T_sim."
      ]
     }
    ],
@@ -536,7 +481,7 @@
     "    #EstTypeList[j].track_vars = ['mNrmNow', 'cNrmNow', 'pLvlNow']\n",
     "\n",
     "# Solve and simulate all consumer types, then gather their wealth levels\n",
-    "multiThreadCommands(EstTypeList,['solve()','initializeSim()','simulate(95)','unpackcFunc()'])\n",
+    "multiThreadCommands(EstTypeList,['solve()','initializeSim()','simulate(105)','unpackcFunc()'])\n",
     "WealthNow = np.concatenate([ThisType.aLvlNow for ThisType in EstTypeList])\n",
     "\n",
     "# Get wealth quartile cutoffs and distribute them to each consumer type\n",
@@ -552,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -628,7 +573,7 @@
        "       [0.4023, 0.3865, 0.3343, 0.2152]])"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -639,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 13,
    "metadata": {
     "scrolled": false
    },
