--- a/notebooks/LifeCycleModelTheoryVsData-Problems.ipynb
+++ b/notebooks/LifeCycleModelTheoryVsData-Problems.ipynb
@@ -39,9 +39,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "code_folding": [
-     0
-    ],
+    "code_folding": [],
     "lines_to_next_cell": 2
    },
    "outputs": [],
@@ -72,9 +70,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "code_folding": [
-     0
-    ],
+    "code_folding": [],
     "lines_to_next_cell": 2
    },
    "outputs": [
@@ -104,9 +100,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "code_folding": [
-     0
-    ]
+    "code_folding": []
    },
    "outputs": [
     {
@@ -138,9 +132,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "code_folding": [
-     0
-    ]
+    "code_folding": []
    },
    "outputs": [],
    "source": [
@@ -215,9 +207,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "code_folding": [
-     0
-    ],
+    "code_folding": [],
     "lines_to_next_cell": 2
    },
    "outputs": [],
@@ -233,9 +223,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "code_folding": [
-     0
-    ],
+    "code_folding": [],
     "lines_to_next_cell": 2,
     "scrolled": true
    },
@@ -492,7 +480,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.4"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
@@ -511,6 +499,19 @@
    "latex_user_defs": false,
    "report_style_numbering": false,
    "user_envs_cfg": false
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
