After remove texmf-local from root

--- a/notebooks/BufferStockTheory-Problems.ipynb
+++ b/notebooks/BufferStockTheory-Problems.ipynb
@@ -111,14 +111,25 @@
     "| $\\wp$ | Probability of Unemployment | $\\texttt{UnempPrb}$ | 0.005 |\n",
     "| $\\theta^{\\large u}$ | Income when Unemployed | $\\texttt{IncUnemp}$ | 0. |\n",
     "| $\\sigma_\\psi$ | Std Dev of Log Permanent Shock| $\\texttt{PermShkStd}$ | 0.1 |\n",
-    "| $\\sigma_\\theta$ | Std Dev of Log Transitory Shock| $\\texttt{TranShkStd}$ | 0.1 |"
+    "| $\\sigma_\\theta$ | Std Dev of Log Transitory Shock| $\\texttt{TranShkStd}$ | 0.1 |\n",
+    "\n",
+    "that define the preferences and environment of microeconomic consumers as detailed below. \n",
+    "\n",
+    "The objective of such a consumer with a horizon of $n$ periods is to maximize the value obtained from the stream of consumption __**c**__ from period $t=T-n$ to a terminal period $T$:\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\mathbf{v}_{t} = \\sum_{i=0}^{n} \\beta^{n}\\mathrm{u}(\\mathbf{c}_{t+n}) \n",
+    "\\end{equation}\n",
+    "\n",
+    "The infinite-horizon solution to the model is defined as the limit of the solution in the first period of life $\\mathrm{c}_{T-n}$ as the horizon $n$ goes to infinity."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For a microeconomic consumer who begins period $t$ with __**m**__arket resources boldface $\\mathbf{m}_{t}$ (=net worth plus current income), the amount that remains after __**c**__onsumption of $\\mathbf{c}_{t}$ will be end-of-period __**A**__ssets $\\mathbf{a}_{t}$, \n",
+    "### Details\n",
+    "For a microeconomic consumer who begins period $t$ with __**m**__arket resources boldface $\\mathbf{m}_{t}$ (=net worth plus current income), the amount that remains after __**c**__onsumption of $\\mathbf{c}_{t}$ will be end-of-period __**a**__ssets $\\mathbf{a}_{t}$, \n",
     "\n",
     "<!-- Next period's 'Balances' $B_{t+1}$ reflect this period's $\\mathbf{a}_{t}$ augmented by return factor $R$:-->"
    ]
@@ -128,7 +139,7 @@
    "metadata": {},
    "source": [
     "\\begin{eqnarray}\n",
-    "\\mathbf{a}_{t}   &=&\\mathbf{m}_{t}-\\mathbf{c}_{t} \\notag \n",
+    "\\mathbf{a}_{t}   &=&\\mathbf{m}_{t}-\\mathbf{c}_{t}. \\notag \n",
     "\\end{eqnarray}\n",
     "\n",
     "The consumer's __**p**__ermanent noncapital income $\\mathbf{p}$ grows by a predictable factor $\\Gamma$ and is subject to an unpredictable multiplicative shock $\\mathbb{E}_{t}[\\psi_{t+1}]=1$,\n",
@@ -148,8 +159,13 @@
     "  We can combine the unemployment shock $\\theta^{\\large u}$ and the transitory shock to employment income $\\theta^{\\large e}$ into $\\theta _{t+1}$, so that next period's market resources are\n",
     "\\begin{eqnarray}\n",
     "    \\mathbf{m}_{t+1} &=& \\mathbf{a}_{t}\\mathsf{R} +\\mathbf{p}_{t+1}\\theta_{t+1}.  \\notag\n",
-    "\\end{eqnarray}\n",
-    "\n",
+    "\\end{eqnarray}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "When the consumer has a CRRA utility function $u(\\mathbf{c})=\\frac{\\mathbf{c}^{1-\\rho}}{1-\\rho}$, the paper shows that the problem can be written in terms of ratios (nonbold font) of level (bold font) variables to permanent income, e.g. $m_{t} \\equiv \\mathbf{m}_{t}/\\mathbf{p}_{t}$, and the Bellman form of [the problem reduces to](https://llorracc.github.io/BufferStockTheory/#The-Related-Problem):\n",
     "\n",
     "\\begin{eqnarray*}\n",
