Penultimate version to QE

--- a/notebooks/BufferStockTheory-Problems.ipynb
+++ b/notebooks/BufferStockTheory-Problems.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "260d06b0",
+   "id": "fcbf1ed5",
    "metadata": {},
    "source": [
     "# Theoretical Foundations of Buffer Stock Saving\n",
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb670753",
+   "id": "97bd1d57",
    "metadata": {},
    "source": [
     "<a id='interactive-dashboard'></a>\n",
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce52d444",
+   "id": "2d25b8e1",
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -53,7 +53,6 @@
     "from HARK import __version__ as HARKversion\n",
     "from HARK.ConsumptionSaving.ConsIndShockModel \\\n",
     "    import (PerfForesightConsumerType, IndShockConsumerType)\n",
-    "from scipy.optimize import newton as zero_point_of\n",
     "import numpy as np\n",
     "from copy import deepcopy\n",
     "\n",
@@ -96,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90f25c7e",
+   "id": "0c93e93f",
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -125,7 +124,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4479a20e",
+   "id": "f58ca610",
    "metadata": {
     "tags": []
    },
@@ -206,7 +205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45bbe89c",
+   "id": "ba7688ac",
    "metadata": {},
    "source": [
     "### Details\n",
@@ -217,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16659091",
+   "id": "3751f6bc",
    "metadata": {},
    "source": [
     "\\begin{eqnarray}\n",
@@ -246,7 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e860f25",
+   "id": "f23bd4a2",
    "metadata": {},
    "source": [
     "When the consumer has a CRRA utility function $u(\\cLev)=\\frac{\\cLev^{1-\\CRRA}}{1-\\CRRA}$, the paper shows that the problem can be written in terms of ratios (nonbold font) of level (bold font) variables to permanent income, e.g. $m_{t} \\equiv \\mLev_{t}/\\pLev_{t}$, and the Bellman form of [the problem reduces to](https://econ-ark.github.io/BufferStockTheory/#The-Related-Problem):\n",
@@ -262,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "035c63c0",
+   "id": "f14d4b61",
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -290,7 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e62606fc",
+   "id": "5cdaa424",
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -311,7 +310,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "844a4a91",
+   "id": "853dd99b",
    "metadata": {},
    "source": [
     "## Convergence of the Consumption Rules\n",
@@ -326,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc649285",
+   "id": "bf5fae7d",
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -354,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "318bed6d",
+   "id": "b23d2744",
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -406,7 +405,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "857a56a4",
+   "id": "2b331047",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -418,7 +417,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eae022da",
+   "id": "6bd76177",
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -442,7 +441,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42d69015",
+   "id": "4e628857",
    "metadata": {
     "tags": []
    },
@@ -464,7 +463,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79fc7968",
+   "id": "bb177a4b",
    "metadata": {
     "tags": []
    },
@@ -483,7 +482,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1cfda546",
+   "id": "3aca1cd7",
    "metadata": {},
    "source": [
     "### [Growth Patience and the GICRaw](https://econ-ark.github.io/BufferStockTheory/#GIC)\n",
@@ -507,7 +506,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8aeb6603",
+   "id": "8243bede",
    "metadata": {},
    "source": [
     "The paper [shows](https://econ-ark.github.io/BufferStockTheory/#Autarky-Value) that a consumer who planned to spend his permanent income $\\{ \\pLev_{t}, \\pLev_{t+1}, ...\\} $ in every period would have value defined by\n",
@@ -525,7 +524,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b343e46",
+   "id": "351ca1ab",
    "metadata": {},
    "source": [
     "### [The Weak Return Impatience Condition (WRIC)](https://econ-ark.github.io/BufferStockTheory/#WRIC)\n",
@@ -543,7 +542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72ae0c18",
+   "id": "e9b6993f",
    "metadata": {},
    "source": [
     "# Key Results\n",
@@ -555,7 +554,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0eda318a",
+   "id": "41689757",
    "metadata": {},
    "source": [
     "## [Natural Borrowing Constraint limits to Artificial Borrowing Constraint](https://econ-ark.github.io/BufferStockTheory/#The-Liquidity-Constrained-Solution-as-a-Limit)"
@@ -563,7 +562,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "600b6442",
+   "id": "e71cd9eb",
    "metadata": {},
    "source": [
     "Defining $\\chi(\\UnempPrb)$ as the consumption function associated with any particular probability of a zero-income shock $\\UnempPrb$, and defining $\\hat{\\chi}$ as the consumption function that would apply in the absence of the transitory zero-income shocks but in the presence of an 'artificial' borrowing constraint requiring $a \\geq 0$ (_a la_ Deaton (1991)), the paper shows that\n",
@@ -577,7 +576,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2a9c157",
+   "id": "53edf596",
    "metadata": {},
    "source": [
     "## [$\\cFunc(m)$ can be Finite Even When Human Wealth Is Infinite](https://econ-ark.github.io/BufferStockTheory/#When-The-GICRaw-Fails)\n",
@@ -591,7 +590,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f07bb61",
+   "id": "98ea6b2f",
    "metadata": {},
    "source": [
     "A [table](https://econ-ark.github.io/BufferStockTheory/#Sufficient-Conditions-For-Nondegenerate-Solution) puts this result in the context of implications of other conditions and restrictions.\n",
@@ -600,7 +599,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f273894",
+   "id": "9647f6cd",
    "metadata": {},
    "source": [
     "For a given $m_{t}$ what is the $c_t$ ($=\\rightarrow a_{t}$) such that for that $a_{t}$ we have that\n",
@@ -616,7 +615,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce85729e",
+   "id": "22dd912e",
    "metadata": {},
    "source": [
     "## [Unique and Stable Values of $\\mNrm$](https://econ-ark.github.io/BufferStockTheory/#Unique-Stable-Points)\n",
@@ -672,7 +671,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6de0f28",
+   "id": "eb0e8515",
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -693,14 +692,14 @@
     "# Create an agent with these parameters\n",
     "GICNrmFailsButGICRawHolds = \\\n",
     "    IndShockConsumerType(**GICNrmFailsButGICRawHolds_params,\n",
-    "                         quietly=False,  # If true, output would be suppressed\n",
+    "                         quietly=False,  # If True, output suppressed\n",
     "                         )"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e318df41",
+   "id": "d6df90b3",
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -712,9 +711,7 @@
     "# Solve the model for these parameter values\n",
     "GICNrmFailsButGICRawHolds.tolerance = 0.01\n",
     "\n",
-    "GICNrmFailsButGICRawHolds.solve(\n",
-    "    quietly=True,  # Suppress output\n",
-    ")\n",
+    "GICNrmFailsButGICRawHolds.solve(quietly=True)  # Suppress output\n",
     "\n",
     "# Because we are trying to solve a problem very close to the critical patience\n",
     "# values, we want to do it with extra precision to be sure we've gotten the\n",
@@ -759,7 +756,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7749e5aa",
+   "id": "1bfacb3f",
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -783,9 +780,7 @@
     "\n",
     "GICNrmFailsButGICRawHolds.solution[0].stge_kind['iter_status'] = 'iterator'\n",
     "# continue solving\n",
-    "\n",
-    "# continue\n",
-    "GICNrmFailsButGICRawHolds.solve(messaging_level=logging.NOTSET, quietly=False)\n",
+    "GICNrmFailsButGICRawHolds.solve(messaging_level=logging.DEBUG, quietly=False)\n",
     "\n",
     "# Test whether the new solution meets a tighter tolerance than before:\n",
     "distance_now = GICNrmFailsButGICRawHolds.solution[0].distance_last\n",
@@ -796,7 +791,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6258280a",
+   "id": "8764ab9d",
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -811,6 +806,7 @@
     "soln = GICNrmFailsButGICRawHolds.solution[0]  # Short alias for solution\n",
     "\n",
     "Bilt, Pars, E_tp1_ = soln.Bilt, soln.Pars, soln.E_Next_\n",
+    "cFunc = Bilt.cFunc\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(12, 8))\n",
     "\n",
@@ -831,9 +827,9 @@
     "c_Stable_Agg_color = \"black\"  # \"blue\"\n",
     "c_Stable_Ind_color = \"black\"  # \"red\"\n",
     "\n",
-    "cVals_Lmting = Bilt.cFunc(mPltVals)\n",
+    "cVals_Lmting = cFunc(mPltVals)\n",
     "c_Stable_Ind = E_tp1_.c_where_E_Next_m_tp1_minus_m_t_eq_0(mPltVals)\n",
-    "c_Stable_Agg = E_tp1_.c_where_E_Next_permShk_times_m_tp1_minus_m_t_eq_0(\n",
+    "c_Stable_Agg = E_tp1_.c_where_E_Next_permGroShk_times_m_tp1_minus_m_t_eq_0(\n",
     "    mPltVals)\n",
     "\n",
     "cVals_Lmting_lbl, = ax.plot(mPltVals, cVals_Lmting, color=cVals_Lmting_color)\n",
@@ -841,7 +837,7 @@
     "                            color=c_Stable_Ind_color, linestyle=\"dashed\", label=c_Stable_Ind_txt)\n",
     "c_Stable_Agg_lbl, = ax.plot(mPltVals, c_Stable_Agg,\n",
     "                            color=c_Stable_Agg_color, linestyle=\"dotted\", label=c_Stable_Agg_txt)\n",
-    "\n",
+    "fsmid = 22\n",
     "ax.set_xlim(xMin, xMax)\n",
     "ax.set_ylim(yMin, yMax)\n",
     "ax.set_xlabel(\"$\\mathit{m}$\", fontweight='bold', fontsize=fsmid, loc=\"right\")\n",
@@ -857,13 +853,8 @@
     "ax.legend(handles=[c_Stable_Ind_lbl, c_Stable_Agg_lbl])\n",
     "ax.legend(prop=dict(size=fsmid))\n",
     "\n",
-    "starting_search_at_m_t = 1.0\n",
-    "mNrmStE = \\\n",
-    "    zero_point_of(E_tp1_.permGroShk_tp1_times_m_tp1_minus_m_t,\n",
-    "                  starting_search_at_m_t)\n",
-    "#mNrmStE = soln.mNrmStE\n",
-    "cNrmStE = c_Stable_Agg = E_tp1_.permGroShk_times_m_tp1_minus_m_t_eq_0(\n",
-    "    mNrmStE)\n",
+    "mNrmStE = Bilt.mNrmStE\n",
+    "cNrmStE = c_Stable_Agg = cFunc(mNrmStE)\n",
     "#mNrmStE_lbl, = ax.plot([mNrmStE,mNrmStE],[yMin,yMax],color=\"green\",linestyle=\"--\",label='Pseudo-Steady-State: $\\mathbb{E}_{t}[\\pmb{m}_{t+1}/\\pmb{m}_{t}]=\\Gamma$')\n",
     "\n",
     "ax.plot(mNrmStE, cNrmStE, marker=\".\", markersize=15, color=\"black\")  # Dot at StE point\n",
@@ -882,7 +873,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ce98d88",
+   "id": "c93b50e8",
    "metadata": {},
    "source": [
     "In the [interactive dashboard](#interactive-dashboard), see what happens as changes in the time preference rate (or changes in risk $\\permShkStd$) change the consumer from _normalized-growth-patient_ $(\\APF > \\tilde{\\PermGroFac})$ to _normalized-growth-impatient_ ($\\APF < \\tilde{\\PermGroFac}$)"
@@ -890,7 +881,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8f68af9",
+   "id": "60c40a6f",
    "metadata": {},
    "source": [
     "As a foundation for the remaining figures, we define another instance of the class $\\texttt{IndShockConsumerType}$, which has the same parameter values as the instance $\\texttt{baseAgent}$ defined previously but is solved to convergence (our definition of an infinite horizon agent type) instead of only 100 periods"
@@ -899,7 +890,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0051dfcd",
+   "id": "864cd22c",
    "metadata": {
     "lines_to_next_cell": 2,
     "tags": []
@@ -920,7 +911,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64ea94c1",
+   "id": "acefb64d",
    "metadata": {
     "tags": []
    },
@@ -952,7 +943,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1209df5b",
+   "id": "419fa2b0",
    "metadata": {},
    "source": [
     "For $\\mNrm$ things are slightly more complicated:\n",
@@ -967,7 +958,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75bea497",
+   "id": "fad11bac",
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -992,7 +983,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04748c37",
+   "id": "208dbbf1",
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -1097,7 +1088,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33f1d506",
+   "id": "533384ca",
    "metadata": {},
    "source": [
     "### [Consumption Function Bounds](https://www.econ2.jhu.edu/people/ccarroll/papers/BufferStockTheory/#AnalysisOfTheConvergedConsumptionFunction)\n",
@@ -1110,7 +1101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42fc8106",
+   "id": "96ab7987",
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -1143,7 +1134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4faf3bd3",
+   "id": "0accf4b8",
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -1218,7 +1209,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75cd2384",
+   "id": "e73bd2f0",
    "metadata": {},
    "source": [
     "### [Upper and Lower Limits of the Marginal Propensity to Consume](https://www.econ2.jhu.edu/people/ccarroll/papers/BufferStockTheory/#MPCLimits)\n",
@@ -1232,7 +1223,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74943869",
+   "id": "afd0b76a",
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -1290,7 +1281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "532c3872",
+   "id": "179b9b79",
    "metadata": {},
    "source": [
     "# Summary\n",
@@ -1300,7 +1291,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dfd53907",
+   "id": "f45d4161",
    "metadata": {
     "heading_collapsed": "true",
     "tags": []
@@ -1321,7 +1312,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89c5688d",
+   "id": "67c926a5",
    "metadata": {
     "tags": []
    },
@@ -1332,7 +1323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "114702c4",
+   "id": "aa5f6cdb",
    "metadata": {
     "jupyter": {
      "source_hidden": true
